Ruler / Protractor thickness measure broken in Ortho view w/larger meshes #48855

Closed
opened 2016-07-14 19:29:55 +02:00 by Ryan · 4 comments

System Information
Win 7 / Quadro 2000

Blender Version
Broken: 3ba83e2
Worked: (optional)

Weird behavior of thickness measure in ortho view, unusable on larger or solidified meshes.

The last bug I submitted (#48846) was fixed, thank you!

Exact steps for others to reproduce the error

  1. Factory Defaults
  2. Ortho View
  3. Ruler / protractor Shift + click- measures through cube
  4. Delete Cube, Add Icosphere
  5. Edit mode scale by 8
  6. Object mode
  7. Ruler / protractor shift + click - doesn't measure correctly
  8. Also has inconsistent behavior measuring any mesh with solidify modifier in ortho view (works in perspective).
**System Information** Win 7 / Quadro 2000 **Blender Version** Broken: 3ba83e2 Worked: (optional) Weird behavior of thickness measure in ortho view, unusable on larger or solidified meshes. The last bug I submitted (#48846) was fixed, thank you! **Exact steps for others to reproduce the error** 1. Factory Defaults 2. Ortho View 3. Ruler / protractor Shift + click- measures through cube 4. Delete Cube, Add Icosphere 5. Edit mode scale by 8 6. Object mode 7. Ruler / protractor shift + click - doesn't measure correctly 8. Also has inconsistent behavior measuring any mesh with solidify modifier in ortho view (works in perspective).
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @shiprex

Added subscriber: @shiprex

This issue was referenced by e68f068682

This issue was referenced by e68f068682e70b434ca785899100c31a0a73f656

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48855
No description provided.